--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Go ###
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,5 +15,17 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Go workspace file
+go.work
+
+### Go Patch ###
+Godeps/
+
+.DS_Store
+.idea/
+.vscode
+.vscode/launch.json
+
+bin/
+
+/.env.local
